# raspberry-pi-microscopy

./: .clangd  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: attach-image.yml  build-image.yml  build.yml  docker.yml  release.yml  tests.yml
assets/web/: index.html
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmpc36c0
build-tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_config  test_exposure  test_keybinding  test_mjpeg_server  test_socket_server
config/: microscopi.conf  microscopy.conf
config/pi-gen/: config
config/pi-gen/stage3/: 01-run.sh
config/pi-gen/stage3-debug/: 00-packages  01-run.sh
config/pi-gen/stage3-debug/01-debug/: 00-run.sh
config/pi-gen/stage3/01-microscopi/: 00-packages  00-run.sh
config/pi-gen/stage3/01-microscopi/files/: autologin.conf  microscopi-ap.nmconnection  microscopi-wifi-ap-check.sh  microscopi-wifi-ap.service  microscopi.service  nm-dnsmasq-microscopi.conf
config/pi-gen/stage3/files/: config.txt.append  microscopy.service
docker/: Dockerfile.build
docs/: controls.md  web-ui.md
scripts/: bootstrap-tools.sh  build-app-debug.sh  build-app.sh  build-deb.sh  build-image-debug.sh  build-image.sh  flash.sh  kdump-load.sh  kdump-save.service  kdump.service  setup-crash-debug.sh
src/: main.cpp
src/camera/: camera.cpp  camera.h  encoder.cpp  encoder.h
src/config/: config.cpp  config.h
src/ui/: gallery.cpp  gallery.h  input.cpp  input.h  keybinding.cpp  keybinding.h  osd.cpp  osd.h  renderer.cpp  renderer.h
src/util/: blurhash.cpp  blurhash.h  exif_writer.cpp  exif_writer.h  exposure.h  media_db.cpp  media_db.h  mjpeg_server.cpp  mjpeg_server.h  resolution.cpp  resolution.h  socket_server.cpp  socket_server.h  timelapse.h
tests/: CMakeLists.txt  test_config.cpp  test_exposure.cpp  test_gallery_layout.cpp  test_keybinding.cpp  test_media_db.cpp  test_mjpeg_media.cpp  test_mjpeg_server.cpp  test_resolution.cpp  test_socket_server.cpp  test_timelapse.cpp  test_tl_dialog.cpp
